--- a/mainWindow.html
+++ b/mainWindow.html
@@ -11,6 +11,11 @@
       <a class="brand-logo center">Farming List</a>   
     </div>
   </nav>
+  <div id="login">
+      <label>Name</label>
+      <input type="text" id="user-name">
+      <button class="waves-effect waves-light btn" id="loginBtn">Sign In</button>
+  </div>
   <ul id="main-list"></ul>
 
   <script src="mainWindow.js"></script>
