--- a/mainWindow.html
+++ b/mainWindow.html
@@ -12,9 +12,14 @@
     </div>
   </nav>
   <div id="login">
-      <label>Name</label>
-      <input type="text" id="user-name">
-      <button class="waves-effect waves-light btn" id="loginBtn">Sign In</button>
+      <p id="ErrorMsg"></p>
+      <label>E-Mail</label>
+      <input type="text" id="email">
+      <div id="buttons">
+        <button class="waves-effect waves-light btn" id="loginBtn">Sign In</button>
+        <button class="waves-effect waves-light btn" id="registerBtn">Sign Up</button>
+      </div>
+
   </div>
   <ul id="main-list"></ul>
 
