Changed some inputs from type text to type email

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -14,7 +14,7 @@
   <div id="login">
       <p id="ErrorMsg"></p>
       <label>E-Mail</label>
-      <input type="text" id="email">
+      <input type="email" id="email">
       <div id="buttons">
         <button class="waves-effect waves-light btn" id="loginBtn">Sign In</button>
         <button class="waves-effect waves-light btn" id="registerBtn">Sign Up</button>
