--- a/registerWindow.html
+++ b/registerWindow.html
@@ -10,7 +10,7 @@
         <form>
           <div>
             <label>E-Mail</label>
-            <input type="text" id="email" required>
+            <input type="email" id="email" required>
             <br>
             <label>Username</label>
             <input type="text" id="username" required>   
