--- a/registerWindow.html
+++ b/registerWindow.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div class="container">
+        <p id="ErrorMsg" style="color:red"></p>
         <form>
           <div>
             <label>E-Mail</label>
